--- a/lhwz.tex
+++ b/lhwz.tex
@@ -82,8 +82,12 @@
 \newpage
 
 \section*{Abstract}
+The aim of this experiment is the determination of the half-lives of the $\alpha$-emitter ${}^{147}$Samarium and the $\beta$-emitter ${}^{40}$Kalium.
+In order to do so we measure the activity of the samples with the help of a counter tube from which we can then calculate the half-lives considering different corrections for the two different kinds of decay: As a result of self-absorption effect, the half-life of ${}^{147}$Samarium is additionally dependant on the surface of the sample while the half-life of ${}^{40}$Kalium will also be dependant of the mass of the sample as a consequence of back-scattering effects.
+We undertake different measurements to determine ideal working points (i.e. the counting tube characteristic is recorded with ${}^{238}$Uranium) before starting the actual measurements with a constant voltage applied to the counting tube from which we will determine the half-lives. 
 
-Our values for the half-lifes are:
+
+The values we obtain for the half-lives are:
 \begin{align*}
 T_{\frac12,\text{Sm}}&=\left(1.93\pm0.04\right)\cdot10^{11}\,\text{years}\\
 T_{\frac12,\text{Ka}}&=\left(1.3 \pm0.8 \right)\cdot10^{9} \,\text{years}
@@ -338,7 +342,7 @@ In this experiment ${}^{147}$Samarium that makes up 15\% of the natural Samarium
 
 \[{}^{147}_{62} \rightarrow {}^{143}_{60}Nd + {}^4_2He\]
 
-\subsubsection{$\beta$-radiator}\label{kaliumdurchfuehrung}
+\subsubsection{$\beta$-radiator}
 As $\beta$-radiator we use ${}^{40}$Kalium with a relative  mass portion of 0.0118\%. The sample used in the Experiment is KCl. 
 ${}^{40}$Kalium can decay via two decays: Either via $\beta^-$-Zerfall to ${}^{40}$Calcium or via electron capture to ${}^{40}$Argon:
 
@@ -347,11 +351,9 @@ ${}^{40}$Kalium can decay via two decays: Either via $\beta^-$-Zerfall to ${}^{4
 
 The ratio for the two decays is $\frac{EC}{\beta-}=0.12$.\\
 
-As discussed in chapter \ref{betacorrection} the measured counting rate of Kalium is mass-dependent. That's why we measure the counting rate of Kalium for different masses and calculate the half-life out of an exponential fit.
+\subsection{Experimental Procedure}
 
-\section{Experimental Procedure}
-
-\subsection{Counter Tube with ${}^{238}$Uran}
+\subsubsection{Counter Tube with ${}^{238}$Uran}
 \begin{itemize}
 	\item First of all the variable settings of the electronic have to be chosen in a way so that a useful signal is generated. In order to achieve such a signal, the signal is observed with an oscilloscope after passing through the preamplifier, the main amplifier and the single channel analyzer (SCA) separately. To optimise the seperation of our signal and noise the lower level of the SCA has to be high enough to eliminate pules caused by noise and at the same time low enough to still register small signal pulses. The chosen settings need to be kept constant during the entire experiment.
 	
@@ -365,34 +367,34 @@ As discussed in chapter \ref{betacorrection} the measured counting rate of Kaliu
 
 
 
-\subsection{Measurement of the half-life of ${}^{147}$Samarium}
+\subsubsection{Measurement of the half-life of ${}^{147}$Samarium}
 
 \begin{itemize}
 	
-	\item We now measure the $\alpha$-Plateau of ${}^{147}$Sm with an inital voltage of $U_{anf}$=1900V and a final voltage of $U_{end}$=3400V (a bit larger than the begnning of the $\beta$-Plateau), voltage intervalls $U_{step}$=100V and counting time per measurement/voltage t=200s
+	\item We now measure the $\alpha$-Plateau of ${}^{147}$Sm with an inital voltage of $U_{anf}$=1900V and a final voltage of $U_{end}$=3400V (a bit larger than the begnning of the $\beta$-Plateau), voltage intervalls $U_{step}$=100V and counting time per measurement/voltage t=200s. With this measurement we want to determine an ideal working point to measure the activity of ${}^{147}$Sm.
 	
 	\item At a working point of 2500V we measure the activity of ${}^{147}$Sm.
       As we want to obtain a statistical error no larger than 2\% we calculate the measuring time needed from the expected value for the counting rate n (obtained from the Plateau measurement):$n_{2500}$=0.48$s^{-1}$=5400s
       
-    \item The background is measured in a combined measurement for both backgrounds (Kalium and Sermarium) over night 
+    \item The background is measured in a combined measurement for both backgrounds (Kalium and Samarium) over night.
     
     \item the diameter of the aluminium dish is measured ten times with a caliper as it can not be assumed that the aluminium dish is perfectly round. 
-.
+
 \end{itemize}
 
-\subsection{Bestimmung der Halbwertszeit von ${}^{40}$Kalium}
+\subsubsection{Measurement of the half-life of ${}^{40}$Kalium}
+\label{kaliumdurchfuehrung}
 
 \begin{itemize}
-	\item Das $\beta$-Plateau wird mit ${}^{40}$K von $U_{anf}$=3100V bis $U_{end}$=4000V in 100V-Schritten und t=100s durchgefahren.
+	\item The $\beta$-Plateau is measured with ${}^{40}$K with an inital voltage of $U_{anf}$=3200V to the final voltage $U_{end}$=4000V in 100V-steps and a counting time of t=100s. Here the working point shall be determined again.
 	
-	\item Bei einer Arbeitsspannung von U=3500V wird für 10 verschiedene Massen die Aktivität von ${}^{40}$K gemessen. Die Masse wird dabei mit einer Präzisionswaage bestimmt. Zum Erhalten eines relativen statistischen Fehlers von 2\% wird hier genauso verfahren wie bei ${}^{147}$Sm. Auch diese Untergrundmessung wird genauso wie die für ${}^{147}$Sm über einen Tag lang durchgeführt.
+	\item At a working point of U=3500V  the activity is measured for different masses. The measuring time is determined as before, by aiming at having a statistical error no larger than 2\%. As the uncertainty for higher activities will be higher due to the Poisson error, we measure more points for higher masses. We then planned to also cover values until 0 gram, but didn't manage to do so as we ran out of time. The mass is measures with a precision scale.
+	
+	\item As mentioned before the underground is measured over night.
+	
 \end{itemize}
 
-%\begin{minipage}{\textwidth}
-%\centering
-%\includegraphics[width=\textwidth]{figures/DSC_0086.JPG}
-%\captionof{figure}{Interface, das die Messzeiten und Spannungen regelt und die Messungen aufzeichnet.}
-%\end{minipage}
+
 
 \newpage
 \section{Analysis}
